# project_lab_2024

./: README.md
backtest/: Backtest.cpp  CMakeLists.txt  CMakePresets.json  TimeStarter.cpp  arbitrage.ipynb  bbo.h  bbo_testing.ipynb  cfepitch.h  observer.h  order.h  orderBook.cpp  orderBook.h  orderManager.cpp  orderManager.h  symbolMap.h  trade_log_testing.ipynb  trader.cpp  trader.h
